--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-export/scenario-export.component.html
@@ -20,8 +20,8 @@
         formControlName="allOrCurrentOnly"
         name="reactive-forms-group"
       >
-        <nb-radio value="one">For each saga, export only the current scenario or the most recent draft version</nb-radio>
-        <nb-radio value="all">Export all scenarios versions of all sagas</nb-radio>
+        <nb-radio value="one">For each scenario group, export only the current scenario or the most recent draft version</nb-radio>
+        <nb-radio value="all">Export all scenarios versions of all scenarios groups</nb-radio>
       </nb-radio-group>
     </form>
   </nb-card-body>
