--- a/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
@@ -15,6 +15,12 @@
   </nb-card-header>
   <nb-card-body class="message">
     <label>{{ subtitle }}</label>
+
+    <ul *ngIf="list?.length">
+      <li *ngFor="let str of list">
+        {{ str }}
+      </li>
+    </ul>
   </nb-card-body>
   <nb-card-footer class="d-flex gap-1 flex-wrap justify-content-end">
     <button
