--- a/bot/admin/web/src/app/shared/components/file-upload/file-upload.component.scss
+++ b/bot/admin/web/src/app/shared/components/file-upload/file-upload.component.scss
@@ -43,7 +43,8 @@
 
           & .footer {
             display: grid;
-            grid-template-columns: 1fr auto;
+            grid-template-columns: auto auto;
+            justify-content: space-between;
             align-items: center;
 
             .fileName {
