--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.scss
@@ -1,6 +1,6 @@
 .tiny-text {
   font-size: 0.7rem;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 .card-row {
@@ -14,7 +14,8 @@
 }
 
 .arrow-wrapper {
-  margin-left: -3rem;
+  // margin-left: -3rem;
+
   .arrow-top-right {
     float: right;
     height: 2px;
@@ -24,14 +25,39 @@
   .arrow-top-left {
     float: left;
     height: 2px;
-    width: 50%;
+    margin-left: -3rem;
+    width: calc(50% + 3rem);
     background-color: rgba(128, 128, 128, 0.4);
   }
   .arrow {
+    position: relative;
     margin: auto;
-    width: 2px;
-    background-color: rgba(128, 128, 128, 0.4);
-    height: 1rem;
+
+    .arrow-line {
+      margin: auto;
+      width: 2px;
+      background-color: rgba(128, 128, 128, 0.4);
+      height: 0.7rem;
+      &.long {
+        height: 1.8rem;
+      }
+    }
+    .add-control {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      background-color: rgb(184, 187, 190);
+      padding: 1px;
+      display: inline-block;
+      border: none;
+      border-bottom-left-radius: 100%;
+      border-bottom-right-radius: 100%;
+      &:hover {
+        background-color: rgba(184, 187, 190, 0.5);
+      }
+    }
   }
 }
 
