--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-edit/scenario-edit.component.html
@@ -7,7 +7,7 @@
     [nbSpinner]="loading"
   >
     <nb-card-header class="d-flex justify-content-between align-items-start">
-      {{ scenario?.id ? 'Edit "' + scenario.name + '"' : 'New scenario' }}
+      {{ scenarioGroup?.id ? 'Edit "' + scenarioGroup.name + '"' : 'New scenario' }}
       <button
         nbButton
         ghost
