--- a/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
+++ b/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
@@ -1,11 +1,13 @@
 <div
-  class="d-flex flex-column"
+  class="d-flex flex-column mb-3"
   [class.mb-3]="hasMargin"
+  data-testid="form-control"
 >
   <label
     *ngIf="label"
     [class.required]="required"
     [for]="name"
+    data-testid="label"
   >
     <abbr
       *ngIf="required"
